# Automa---Gemini

./: .gitignore  CODEBASE_ANALYSIS.md  GEMINI.md  PROJECT_ANALYSIS.md  README.md  auth.py  config.py  crud.py  database.py  executor.py  main.py  models.py  pyproject.toml  run_sync.bat  scheduler.py  schemas.py  zadanie.md
static/: dashboard.js  index.html  styles.css
